--- a/src/app/features/workoutoverview/workoutoverview.component.html
+++ b/src/app/features/workoutoverview/workoutoverview.component.html
@@ -20,7 +20,7 @@
           </div>
         </a>
       </div>
-      <a class="groupBox" routerLink="workout">
+      <a class="groupBox" routerLink="/saved-workouts-list">
         <div class="workoutgroups">
           <div class="groupTextHolder">
             <p class="black-white-text">Saved Workouts</p>
