--- a/src/app/shared/filter/filter.component.html
+++ b/src/app/shared/filter/filter.component.html
@@ -12,3 +12,4 @@
     <img src="../../../assets/pictures/menuButtons/workoutCreation/filter-button.svg" class = "filter-expansion-button" (click)="this.expandCollapseFilterDiv()">
   </div>
 </div>
+<div *ngIf="this.filterDivExpanded === true" class="space-provider-for-Filter"></div>
