--- a/src/app/features/home/management.component.html
+++ b/src/app/features/home/management.component.html
@@ -4,53 +4,15 @@
 <div class="d-flex justify-content-center content-wrapper">
 
   <div class="content-div">
-    <!--
-    <div *ngIf="this.postPage != null">
 
-      <div *ngFor="let post of this.postPage.posts">
-        <div *ngIf="post.simplePostDTO != null">
-          <p>{{post.simplePostDTO.previewImage}}</p>
-          <img [src]="this.saveUrl(post.simplePostDTO.previewImage)">
-        </div>
-        <div *ngIf="post.workoutDTO != null">
-          <p> {{post.workoutDTO.previewImageUrl}}</p>
-          <p> thats a workout </p>
-          <img [src]="this.saveUrl(post.workoutDTO.previewImage)">
-        </div>
-      </div>
-
-    </div>
-    -->
     <div *ngFor="let post of this.postListings; index as i" class="workoutsContainer">
       <div *ngIf="post.simplePost != null" class = "centerContent frame-content">
         <img [src]="this.saveUrl(post.simplePost.userDTO.profileImageSmall)">
         <img [src]="this.saveUrl(post.simplePost.previewImage)" class="centerContent imageLimiter img-thumbnail">
         <p>{{post.simplePost.description}}</p>
       </div>
-      <div *ngIf="post.workout != null" class = "centerContent frame-content">
-        <img [src]="this.saveUrl(post.workout.creator.profileImageSmall)">
-        <h2 class="centerContent"
-            style="text-align: center;">{{post.workout.name}}</h2>
-        <img class="centerContent imageLimiter img-thumbnail"
-             [src]="this.saveUrl(post.workout.previewImage)" (click)="expandContent(post)">
-        <div class="expandButtonWrapper centerContent">
-          <img [src]=this.likeButtonImage(post.workout.isSavedFromCurrentUser) class = "like-button-image" (click)=this.likeWorkout(post.workout)>
-          <img class="toggleImageStyle" [src]="post.toggleImage"
-               (click)="expandContent(post)">
-        </div>
-        <div [ngClass]="post.isCollapsed ? 'collapsed' : 'expanded'"
-             class="centerContent">
-          <div *ngFor="let days of post.workout.days">
-            <h3 style = "text-align: center; margin-top: 30px" class = "centerContent">
-              {{days.name}} <img (click)="this.playDayWorkout(days)" class = "playButton" alt="play" src="../../assets/pictures/menuButtons/square-play-button.svg">
-            </h3>
-            <div class="phaseContainer" *ngFor="let phase of days.phases">
-              <h4 class="phase">{{phase.name}}</h4>
-              <p *ngFor="let exercise of phase.exercises">{{exercise.name}}</p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <app-workout-post *ngIf="post.workout != null" [workout]="post.workout"></app-workout-post>
+
     </div>
 
 
