--- a/src/app/shared/filter/filter.component.css
+++ b/src/app/shared/filter/filter.component.css
@@ -9,39 +9,6 @@
   position: fixed;
   overflow: hidden;
 }
-
-.filterGroupContainer {
-  width: 100%;
-  text-align: center;
-  margin-top: 50px;
-}
-.single-filters-container {
-  display: inline-block;
-  margin-bottom: 15px;
-}
-.single-filter-span {
-  margin-left: 20px;
-  margin-right: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border: solid black 1px;
-  border-radius: 7px;
-  background-color: lightblue;
-  cursor: pointer;
-}
-.active-filter {
-  background-color: lightblue;
-}
-
-.inactive-filter {
-  background-color: transparent;
-}
-.filterGroupTitle {
-  text-align: center;
-  margin-bottom: 3px;
-  font-weight: bold;
-}
-
 .button-wrapper {
   position: fixed;
   display: flex;
@@ -60,6 +27,37 @@
   height: 50px;
   cursor: pointer;
 }
+.single-filter-span {
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: solid black 1px;
+  border-radius: 7px;
+  background-color: lightblue;
+  cursor: pointer;
+}
+.active-filter {
+  background-color: lightblue;
+}
+
+.inactive-filter {
+  background-color: transparent;
+}
+.single-filters-container {
+  display: inline-block;
+  margin-bottom: 15px;
+}
+.filterGroupTitle {
+  text-align: center;
+  margin-bottom: 3px;
+  font-weight: bold;
+}
+.filterGroupContainer {
+  width: 100%;
+  text-align: center;
+  margin-top: 50px;
+}
 .expanded-to-content {
   height: auto;
   border: solid black 1px;
@@ -68,4 +66,8 @@
 .collapsed-to-button {
   height: 0px;
   border: none;
+}
+.space-provider-for-Filter {
+  width: 100%;
+  height: 350px;
 }
