--- a/src/app/features/workout-list/workout.component.html
+++ b/src/app/features/workout-list/workout.component.html
@@ -2,7 +2,7 @@
 
 <div class="d-flex justify-content-center content-wrapper">
   <div class="content-div">
-    <app-filter [filterGroups]="this.filterGroups"></app-filter>
+    <app-filter [filterGroups]="this.filterGroups" (filterEvent)="this.loadByFilter($event)"></app-filter>
 
     <div *ngFor="let workout of this.workouts" class="workoutsContainer">
 
