--- a/src/app/shared/filter/filter.component.css
+++ b/src/app/shared/filter/filter.component.css
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   margin-top: 10px;
-  position: fixed;
   overflow: hidden;
 }
 .button-wrapper {
@@ -30,12 +29,14 @@
 .single-filter-span {
   margin-left: 20px;
   margin-right: 20px;
+  margin-bottom: 15px;
   padding-left: 10px;
   padding-right: 10px;
   border: solid black 1px;
   border-radius: 7px;
   background-color: lightblue;
   cursor: pointer;
+  display: inline-block;
 }
 .active-filter {
   background-color: lightblue;
@@ -52,11 +53,12 @@
   text-align: center;
   margin-bottom: 3px;
   font-weight: bold;
+  margin-bottom: 20px;
 }
 .filterGroupContainer {
   width: 100%;
   text-align: center;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 .expanded-to-content {
   height: auto;
@@ -70,4 +72,15 @@
 .space-provider-for-Filter {
   width: 100%;
   height: 350px;
+}
+.search-button {
+  width: 150px;
+  height: 30px;
+  background-color: #111110;
+  color: antiquewhite;
+  border-radius: 6px;
+  margin-top: 50px;
+  margin-bottom: 10px;
+  margin-right: auto;
+  margin-left: auto;
 }
