--- a/src/app/shared/shared.style.css
+++ b/src/app/shared/shared.style.css
@@ -1,6 +1,7 @@
 @media (max-width: 767px) {
   .content-wrapper {
     width: 100%;
+    min-height: calc(100% - 35px);
     margin: 0;
     padding: 0;
   }
@@ -8,6 +9,7 @@
 @media (min-width: 768px) {
   .content-wrapper {
     width: 100%;
+    min-height: calc(100% - 45px);
     margin: 0;
     padding: 0;
     background-color: RGB(250, 250, 250);
