--- a/src/app/shared/workout-post/workout-post.component.css
+++ b/src/app/shared/workout-post/workout-post.component.css
@@ -45,14 +45,16 @@ h4 {
   cursor: pointer;
 }
 .toggleImageStyle {
-  max-height: 20px;
-  margin-top: 25px;
+  height: 40px;
+
+  margin-right: 10px;
   float: right;
   cursor: pointer;
 }
 .expandButtonWrapper {
   width: 100%;
   height: 45px;
+  background-color: #099FDF;
 }
 .workoutsContainer {
   padding-top: 50px;
@@ -69,4 +71,7 @@ h4 {
   width: 100%;
   height: 350px;
 
+}
+.description-container {
+  width: 100%;
 }
