--- a/src/app/features/workout-player/entry-panel/entry-panel.component.css
+++ b/src/app/features/workout-player/entry-panel/entry-panel.component.css
@@ -10,9 +10,8 @@
 
 .entry-panel-wrapper {
   margin: 0;
-  height: calc(100% - 20px);
+  height: 100%;
   width: 100%;
-  overflow-x: auto;
   display: flex;
   flex-direction: row;
 }
@@ -63,9 +62,10 @@ input::-webkit-inner-spin-button {
 .inputFieldsRowWrapper {
   display: flex;
   flex-direction: column;
-  width: 100px;
+
   height: 100%;
 }
+
 .setInput {
   margin-right: auto;
   margin-left: auto;
@@ -148,27 +148,19 @@ input::-webkit-inner-spin-button {
   display: table;
   height: 90%;
 }
-.form-grouping {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-.entry-panel-outer-wrapper {
 
-  height: 240px;
-  max-width: 498px;
-  min-width: 300px;
-  overflow-x: auto;
+.form-grouping {
   display: flex;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.entry-panel-outer-wrapper {
+  width: 100%;
+  height: 100%;
   padding: 0;
   margin: 0;
 }
-.entry-panel-title {
-  height: 20px;
-  font-size: 17px;
-  font-weight: bold;
-  margin-left: 30px;
-  margin-bottom: 0;
-  margin-top: 0;
-  padding: 0;
-}
+
