--- a/src/app/features/workout-player/next-exercise-preview/next-exercise-preview.component.css
+++ b/src/app/features/workout-player/next-exercise-preview/next-exercise-preview.component.css
@@ -1,6 +1,6 @@
 .chart {
-  width: 300px;
-  height: 240px;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
